Finished resume project

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zayn Vaux's Resume</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-    <script src="./js/scripts.js"></script>
+    <link rel="stylesheet" href="css/styles.css" />
+    <script src="./js/scripts.js" defer></script>
   </head>
-  <!--start of the body-->
+  <!--start of the body and resume-->
   <body class="fancy-body">
     <h1 id="candidate-name">Zayn Vaux</h1>
     <h2 id="candidate-desired-role">Talented Frontend Developer</h2>
@@ -30,7 +30,7 @@
       <li>Time Management</li>
     </ol>
     <!--hobbies list-->
-    <h2>Hobbies</h2>
+    <h2 id="hobbies">My Hobbies</h2>
     <ul id="hobbies-list">
       <li>Traveling the world</li>
       <li>Basketball</li>
